// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - default - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "default",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.alt - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.alt - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": "Alt text",
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.alt",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.color - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{\\"backgroundColor\\":\\"#f12345\\"},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.color",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.content - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": "Avatar",
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.content",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content - value[0] - Avatar 3`] = `mocked`;

exports[`Mock render - properties.content - value[0] - Avatar 4`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": "Avatar",
      "className": "{\\"style\\":[{},{\\"border\\":\\"1px solid red\\"}]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.content",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.gap - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.gap - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": "Avatar",
      "className": "{\\"style\\":[{},null]}",
      "gap": 40,
      "icon": undefined,
      "id": "properties.gap",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon object - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.icon object - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": <AntIcon
        basePath=""
        blockId="properties.icon object_icon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "AiOutlineUser",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon object",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.icon string - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": <AntIcon
        basePath=""
        blockId="properties.icon string_icon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AiOutlineUser"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon string",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string properties.shape square - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.icon string properties.shape square - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": <AntIcon
        basePath=""
        blockId="properties.icon string properties.shape square_icon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AiOutlineUser"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon string properties.shape square",
      "onClick": [Function],
      "shape": "square",
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.shape - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.shape - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.shape",
      "onClick": [Function],
      "shape": "square",
      "size": undefined,
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size large - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.size large - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.size large",
      "onClick": [Function],
      "shape": undefined,
      "size": "large",
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size small - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.size small - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.size small",
      "onClick": [Function],
      "shape": undefined,
      "size": "small",
      "src": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.src - value[0] - Avatar 1`] = `mocked`;

exports[`Mock render - properties.src - value[0] - Avatar 2`] = `
Array [
  Array [
    Object {
      "alt": undefined,
      "children": undefined,
      "className": "{\\"style\\":[{\\"backgroundColor\\":false},null]}",
      "gap": undefined,
      "icon": undefined,
      "id": "properties.src",
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "src": "https://docs.lowdefy.com/images/favicon.png",
    },
    Object {},
  ],
]
`;
